RESOLVED FIXED200519
[Win] Fix internal build
https://bugs.webkit.org/show_bug.cgi?id=200519
Summary [Win] Fix internal build
Per Arne Vollan
Reported 2019-08-07 15:06:52 PDT
The script 'generate-js-builtins.py' cannot be found when building WebCore.
Attachments
Patch (1.23 KB, patch)
2019-08-07 17:05 PDT, Per Arne Vollan
no flags
Patch (1.34 KB, patch)
2019-08-07 17:37 PDT, Per Arne Vollan
no flags
Patch (2.38 KB, patch)
2019-08-08 15:28 PDT, Per Arne Vollan
no flags
Patch (4.64 KB, patch)
2019-08-08 16:46 PDT, Per Arne Vollan
no flags
Patch (4.64 KB, patch)
2019-08-08 16:48 PDT, Per Arne Vollan
no flags
Archive of layout-test-results from ews116 for mac-highsierra (3.04 MB, application/zip)
2019-08-08 19:17 PDT, EWS Watchlist
no flags
Per Arne Vollan
Comment 1 2019-08-07 17:05:47 PDT
Don Olmstead
Comment 2 2019-08-07 17:20:33 PDT
Comment on attachment 375767 [details] Patch This should be copying to JavaScriptCore_SCRIPTS_DIR
Don Olmstead
Comment 3 2019-08-07 17:21:58 PDT
See the end of Source/cmake/OptionsAppleWin if (INTERNAL_BUILD) set(WTF_SCRIPTS_DIR "${CMAKE_BINARY_DIR}/../include/private/WTF/Scripts") set(JavaScriptCore_SCRIPTS_DIR "${CMAKE_BINARY_DIR}/../include/private/JavaScriptCore/Scripts") endif () And by default in Source/cmake/WebKitFS.cmake set(JavaScriptCore_SCRIPTS_DIR "${FORWARDING_HEADERS_DIR}/JavaScriptCore/Scripts")
Per Arne Vollan
Comment 4 2019-08-07 17:37:51 PDT
Alex Christensen
Comment 5 2019-08-08 09:11:28 PDT
Comment on attachment 375770 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375770&action=review > Source/JavaScriptCore/CMakeLists.txt:1353 > + ${FORWARDING_HEADERS_DIR}/JavaScriptCore/Scripts JavaScriptCore_SCRIPTS_DIR? > Source/JavaScriptCore/CMakeLists.txt:1359 > + ${FORWARDING_HEADERS_DIR}/JavaScriptCore/Scripts JavaScriptCore_SCRIPTS_DIR?
Per Arne Vollan
Comment 6 2019-08-08 15:28:45 PDT
Per Arne Vollan
Comment 7 2019-08-08 15:30:04 PDT
I created another patch where the JSC scripts are copied after building JSC. Thanks for reviewing, all!
Per Arne Vollan
Comment 8 2019-08-08 16:46:12 PDT
Per Arne Vollan
Comment 9 2019-08-08 16:48:36 PDT
EWS Watchlist
Comment 10 2019-08-08 19:17:45 PDT
Comment on attachment 375859 [details] Patch Attachment 375859 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/12882335 New failing tests: imported/w3c/web-platform-tests/IndexedDB/idb-binary-key-roundtrip.htm
EWS Watchlist
Comment 11 2019-08-08 19:17:47 PDT
Created attachment 375881 [details] Archive of layout-test-results from ews116 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-highsierra Platform: Mac OS X 10.13.6
WebKit Commit Bot
Comment 12 2019-08-08 22:51:50 PDT
Comment on attachment 375859 [details] Patch Clearing flags on attachment: 375859 Committed r248462: <https://trac.webkit.org/changeset/248462>
WebKit Commit Bot
Comment 13 2019-08-08 22:51:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 14 2019-08-08 22:52:21 PDT
Note You need to log in before you can comment on or make changes to this bug.